kube-manifest/micronaut-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: micronaut-a
  labels:
    app: micronaut-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micronaut-a
  template:  
    metadata:
      labels: 
        app: micronaut-a
    spec:
      containers:
        - name: micronaut-a
          image: lbita/demo-micronaut:latest
          ports: 
            - containerPort: 8080          
          livenessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10 
          readinessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10   
          resources:
            requests:
              cpu: "500m" 
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "500Mi"
