kube-manifest/micronaut-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: micronaut-a-srv
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /hello
spec:
  type: ClusterIP
  selector:
    app: micronaut-a
  ports:
    - port: 80
      targetPort: 8080
